--- a/喵玉漢化組/正在處理/COMIC/與狐妖結緣/校稿.md
+++ b/喵玉漢化組/正在處理/COMIC/與狐妖結緣/校稿.md
@@ -1,19 +1,42 @@
-02
-嘿呀 今天也是....好精致的便当啊
+# 妖狐と縁結び
 
-因为是给香霖准备的便当所以下了一番功夫哦
-便当里满满的全是我的爱哦，吃的时候要好好品味哟
-（那么多...)
+## 目録
 
-但是这个分量，魔理沙也一起ーー
-啊！对了,我还有事！
-那就再见啦 亲爱的老公大人
+- [02](#02)
 
-嘿
-是谁
-你这家伙
+---
 
-03 恋色见习
+## 02
+
+哎呀
+
+今天的饭也很...精致呢  
+
+因为是做给香霖吃的饭 所以所以下了一番功夫  
+饭里满满的全是我的爱哦，吃的时候要好好品味哟
+
+（竟然还有...)
+
+但是饭的分量这么大 魔理沙也一起ーー
+
+啊！ 对了 我还有事！
+
+那就再见啦
+
+亲爱的老公
+
+喂
+
+// 校注：日文的語序和中文不一樣，下文請按文字順序而不要按標點符合找對應的語句  
+你...
+
+是谁？
+
+---
+
+## 03
+
+恋色见习
 先别激动
 我不是汝的敌人
 
@@ -22,7 +45,7 @@
 
 要说的话--
 也就代替不开窍又晚熟的汝？
-请魔理沙喜欢的那个人吃了爱妻便当？
+请魔理沙喜欢的那个人吃了爱妻饭？
 
 
 喜喜喜喜欢的那个人?爱妻....!!
