--- a/喵玉漢化組/正在處理/COMIC/結緣狐妖/校稿.md
+++ b/喵玉漢化組/正在處理/COMIC/結緣狐妖/校稿.md
@@ -3,6 +3,9 @@
 ## 目録
 
 - [02](#02)
+- [03](#03-恋色实习生)
+- [04](#04-原来去神社是刑罚)
+- [05](#05)
 
 ---
 
@@ -10,12 +13,12 @@
 
 哎呀
 
-今天的饭也很...精致呢  
+今天的饭也很…精致呢  
 
-因为是做给香霖吃的饭 所以所以下了一番功夫  
+因为是做给香霖吃的饭 所以下了一番功夫  
 饭里满满的全是我的爱哦，吃的时候要好好品味哟
 
-（竟然还有...)
+（竟然还有…)
 
 但是饭的分量这么大 魔理沙也一起ーー
 
@@ -28,86 +31,133 @@
 喂
 
 // 校注：日文的語序和中文不一樣，下文請按文字順序而不要按標點符合找對應的語句  
-你...
+你…
 
 是谁？
 
 ---
 
-## 03
+## 03 恋色实习生
 
-恋色见习
-先别激动
-我不是汝的敌人
+嘛嘛 先别激动
 
-是不是敌人我说了算
-变成我的样子对香霖做了什么！？
+我不是你的敌人
 
-要说的话--
-也就代替不开窍又晚熟的汝？
-请魔理沙喜欢的那个人吃了爱妻便当？
+是不是敌人我说了算!
 
+你变成我的样子对香霖做了什么！？
 
-喜喜喜喜欢的那个人?爱妻....!!
-不是这样的啊！！
+你问做了什么--  
+不过是代替青涩又晚熟的你  
+给魔理沙亲爱的男朋友  
 
-对这个情况反应...
-真激烈啊
+做了爱妻便当而已哦？
 
-04去神社刑罚
-（呼
-骗了你的就是我
-本该先亮出身份的
+亲亲亲  
+亲爱的男朋友  
+爱妻什么的…!!
+
+我们才不是这种关系！！
+
+在这个情况下作出这种反应…
+
+看来真挺严重的…
+
+（真是的）  
+（真是的）
+
+---
+
+## 04 原来去神社是刑罚
+
+玩笑就开到这里
+
+我应该先亮明身份的
+
+（毛绒绒）
 
 你..你是！？
 
-之前变成我样子的狐妖！？
-上次多谢了，雾雨魔理沙小姐（弹出
+之前变成过我样子的狐妖！？
 
-呼呵呵 这次又色色地对香霖干了点啥坏事。。。！？（滋滋
-没有没有？！吾可没有在想着干什么坏事啊...（别蓄力？！
-最后给你个选择
-我的魔法和去神社，你选哪个
-（住在神社的 R小姐
-怎么选都死路一条啊？！
+（鞠躬
 
-05密不透风
-我不是要当第三者啦（破破烂烂
-我只是想在魔理沙的恋爱上帮一把而已。。。
-恋。。。恋爱？！
-所所。。所以说我和香霖恋爱什么的。。。！！那个。。。！！
-（喊起来了？
+上次承蒙关照 雾雨魔理沙
+
+…吼吼 这次是想 对香霖搞色情 做坏事吗…！？
+
+（滋滋
+
+不不！？ 所以说我并没有 在想什么不好的事…
+
+（别蓄力啊！？
+
+既然你死到临头了 就给你做个选择
+
+吃我的魔法和到神社去 你选哪个？
+
+（长在神社的 R小姐
+
+怎么选 都死路一条！？
+
+---
+
+## 05 密不透风
+
+我不是要横刀夺爱啦（破破烂烂
+
+我只是想在魔理沙的恋爱上帮一把而已…
+
+恋恋恋…恋爱！？  
+所所所…所以说我和香霖恋爱什么的…！！那个…！！
+
+（在叫我？
+
+真的就是你这种地方 很需要别人帮忙啊
+
 啊这 真的干这些事了？
 
-魔理沙小姐的事在狐妖中都很有名
-最近啊 大家都说从吃瓜津津有味看到干着急
-（还没谈成。。。）（真是的）
-完蛋...想法暴露了。。。？！
-这么说吧，这件事不约而同地成为大家的谈资了
-恐怕你身边的人全都注意到了吧？(啊）
-。。。虽然这样，但是好像只有店主还没注意到
-没错
+魔理沙的事 在狐妖中都很有名
+最近已经从 露出老父亲的笑容 变成要被急死了
+
+（还没在一起…）
+
+（真的是）
+
+不要吧…我的内心 毫无遮挡…！？
+
+话虽如此 连没有交流的我们 都作为谈资了
+
+恐怕你身边的人全都注意到了吧？
+
+(啊）
+
+…然而，偏偏只有店主还没有注意到
+
+对
+
+---
 
 06
 破锅也得有个盖
-虽说我也为了让他意识到魔理沙的情感试着大胆引诱。。。
-但是怎么做都只得到很败兴的回应。。。
+虽说我也为了让他意识到魔理沙的情感试着大胆引诱…
+但是怎么做都只得到很败兴的回应…
 对！就是这样！！
 不管怎么做香霖那家伙在这方面都无动于衷啊！！
 但是每次都用同样的态度回应
 居然意外的很开心
-啊，是的吧。。。
+啊，是的吧…
 
-啊。。。
-那个。。。除此之外。。。
+啊…
+那个…除此之外…
 总在奇怪的地方关照我，甚至可以说有点合不来。。？
 （没错没错没错！）
 说得对！那家伙就是这样的！！
 
 但就是这样
-也正是心里有我的证据吧。。。
-啊。。。这
-也有魔理沙的问题吧？！
+也正是心里有我的证据吧…
+啊…这
+也有魔理沙的问题吧！？
 
 007
 扭曲的判定
@@ -125,8 +175,8 @@
 没错吧！已经不能理解魔理沙了！？
 
 08开始的第一步
-。。。总之我知道你不是坏人了
-那么，那个。。。
+…总之我知道你不是坏人了
+那么，那个…
 还是别做的太过分比较好吧？
 好，好的！我会尽力的！！
 
@@ -136,11 +186,11 @@
 
 （嘤嘤嘤 (晴明：狐狸叫，但是不知道用啥好））
 那么接下来，魔理沙想和店主做到什么程度？
-最终还是以结婚为前提的吧？！
+最终还是以结婚为前提的吧！？
 
-牵。。。
+牵…
 
-如果能牵着手散步就。。。
+如果能牵着手散步就…
 
 你到底是有多青涩啊！！
 
@@ -164,21 +214,21 @@
 一想到去那家店的人的打扮
 这种衣服香霖早就看惯了吧
 
-额。。。那家店简直就是什么属性都有的魔境啊！！
+额…那家店简直就是什么属性都有的魔境啊！！
 
 011
 有时公主也会跟过来
 
-那个店不就是个冷清的旧工具店吗？！
+那个店不就是个冷清的旧工具店吗！？
 为啥像个火爆的任选商店似的
 
-我也想知道啊？！
+我也想知道啊！？
 知道的时候就已经聚集起各式各样的人了
 呜。。这样的话，只能用必杀技了！！ 嘭！
 
 必杀技，兔女郎哦！！ 兔女郎！！
 （兔兔女郎）
-这样漂亮的大耳朵别的客人可没有吧？！
+这样漂亮的大耳朵别的客人可没有吧！？
 兔子大概也是熟客吧。。
 
 012
@@ -191,7 +241,7 @@
 是那个吗？类似狐妖的（七十二变！）之类的主意？
 （嘭）
 
-不是已经说好了，只要魔理沙同意就可以随意换装的吗？！
+不是已经说好了，只要魔理沙同意就可以随意换装的吗！？
 （瞪眼）
 你太过分了吧？
 
@@ -214,8 +264,8 @@
 这样的店主魔理沙受得了吗
 （闪亮）
 （哈）
-啊、啊嘞，没有砰然心动吗？！
-对了！少了呆毛？！
+啊、啊嘞，没有砰然心动吗！？
+对了！少了呆毛！？
 （嘭）
 
 这啥啊，睡醒没洗头吗
@@ -237,7 +287,7 @@
 
 （抚摸 一心一意 最喜欢了 可爱）
 
-啊。。。非常 抱歉。。
+啊…非常 抱歉。。
 
 015
 他追求的东西
@@ -247,7 +297,7 @@
 找找看香霖喜欢的东西吧！？
 认真想一想好吗！？
 
-这样啊。。。
+这样啊…
 那个店主好像对女性没兴趣
 是不是只喜欢衣服本身啊？
 （又破了啊。。 先赊账）
