--- a/喵玉漢化組/正在處理/COMIC/結緣狐妖/校稿.md
+++ b/喵玉漢化組/正在處理/COMIC/結緣狐妖/校稿.md
@@ -5,7 +5,10 @@
 - [02](#02)
 - [03](#03-恋色实习生)
 - [04](#04-原来去神社是刑罚)
-- [05](#05)
+- [05](#05-密不透风)
+- [06](#06-破锅也得有个盖)
+- [07](#07-扭曲的判定)
+- [08](#08-开始的第一步)
 
 ---
 
@@ -138,43 +141,69 @@
 
 ---
 
-06
-破锅也得有个盖
-虽说我也为了让他意识到魔理沙的情感试着大胆引诱…
-但是怎么做都只得到很败兴的回应…
-对！就是这样！！
-不管怎么做香霖那家伙在这方面都无动于衷啊！！
-但是每次都用同样的态度回应
-居然意外的很开心
-啊，是的吧…
+## 06 破锅也得有个盖
 
-啊…
-那个…除此之外…
-总在奇怪的地方关照我，甚至可以说有点合不来。。？
+虽说我也为了让他在意魔理沙而做了大胆的撒娇…  
+但是怎么做都只得到很不紧不慢的回应…
+
+（狐狸魔理沙）
+
+对！就是这样！！  
+香霖那家伙不管我做什么他都无动于衷啊！！
+
+但他每次都用同样的态度对我
+
+这种意外地也很开心
+
+嗯… 是的吧…
+
+嗯… 除此之外…  
+他还总在奇怪的地方关照我，反而有点难以相处…？
+
 （没错没错没错！）
-说得对！那家伙就是这样的！！
 
-但就是这样
+太对了！ 那家伙有时就是这样的！！
+
+但是那种事
+
 也正是心里有我的证据吧…
-啊…这
-也有魔理沙的问题吧！？
 
-007
-扭曲的判定
-不-感性不利于人进行各种否定的思考 现在就不如顺着来想
+啊…这  
+魔理沙这边也有问题啊！？
+
+---
+
+## 07 扭曲的判定
+
+哎呀—— 每个人的感性都不一样 不应该否定地思考  
+这里应该顺着她去说）
+
 （bingle）
-啊！没准 店主实际上是太过在意魔理沙了，不知不觉就变成了冷淡的态度？
 
-就那个香霖 不可能吧（你完全不懂吧）
-这点完全否定了！？
+啊！那么 店主也说不定其实是太过在意魔理沙了 不小心就采取了冷淡的态度？
 
-也，也许
-难道本来就对女性没有兴趣吗
-没戏了，感觉完全没戏了
-完了，不小心说出来了
-没错吧！已经不能理解魔理沙了！？
+这可是那个香霖啊 怎么可能啊
 
-08开始的第一步
+（你完全不懂吧）
+
+这里会否定啊！？
+
+嘛，嘛 基本上该说是他对女性没有兴趣吧  
+整个人都枯竭了的感觉…
+
+…糟了，不小心说出心里话了——
+
+是呢♪！
+
+（我懂的）
+
+真是的 我搞不懂魔理沙——！？
+
+---
+
+## 08 开始的第一步
+
+<!-- TODO： 從這行開始 -->
 …总之我知道你不是坏人了
 那么，那个…
 还是别做的太过分比较好吧？
