--- a/喵玉漢化組/正在處理/COMIC/結緣狐妖/校稿.md
+++ b/喵玉漢化組/正在處理/COMIC/結緣狐妖/校稿.md
@@ -1,17 +1,5 @@
 # 結緣狐妖
 
-## 目録
-
-- [02](#02)
-- [03](#03-恋色实习生)
-- [04](#04-原来去神社是刑罚)
-- [05](#05-密不透风)
-- [06](#06-破锅也得有个盖)
-- [07](#07-扭曲的判定)
-- [08](#08-开始的第一步)
-
----
-
 ## 02
 
 哎呀
@@ -19,7 +7,7 @@
 今天的饭也很…精致呢  
 
 因为是做给香霖吃的饭 所以下了一番功夫  
-饭里满满的全是我的爱哦，吃的时候要好好品味哟
+饭里满满的全是我的爱哦 吃的时候要好好品味哟
 
 （竟然还有…)
 
@@ -33,7 +21,7 @@
 
 喂
 
-// 校注：日文的語序和中文不一樣，下文請按文字順序而不要按標點符合找對應的語句  
+// 校注：日文的語序和中文不一樣 下文請按文字順序而不要按標點符合找對應的語句  
 你…
 
 是谁？
@@ -50,7 +38,7 @@
 
 你变成我的样子对香霖做了什么！？
 
-你问做了什么--  
+你问做了什么—  
 不过是代替青涩又晚熟的你  
 给魔理沙亲爱的男朋友  
 
@@ -135,7 +123,7 @@
 
 (啊）
 
-…然而，偏偏只有店主还没有注意到
+…然而 偏偏只有店主还没有注意到
 
 对
 
@@ -158,7 +146,7 @@
 嗯… 是的吧…
 
 嗯… 除此之外…  
-他还总在奇怪的地方关照我，反而有点难以相处…？
+他还总在奇怪的地方关照我 反而有点难以相处…？
 
 （没错没错没错！）
 
@@ -188,10 +176,10 @@
 
 这里会否定啊！？
 
-嘛，嘛 基本上该说是他对女性没有兴趣吧  
+嘛 嘛 基本上该说是他对女性没有兴趣吧  
 整个人都枯竭了的感觉…
 
-…糟了，不小心说出心里话了——
+…糟了 不小心说出心里话了——
 
 是呢♪！
 
@@ -203,281 +191,493 @@
 
 ## 08 开始的第一步
 
-<!-- TODO： 從這行開始 -->
 …总之我知道你不是坏人了
-那么，那个…
-还是别做的太过分比较好吧？
-好，好的！我会尽力的！！
 
-好耶！这样就可以得到魔理沙许可地跟踪了
+嘛 那个…  
+可别做些太过分的事哦
+
+好 好的！我会尽力的！！
+
+好耶！这下我的助攻也获得魔理沙首肯了
+
 晚上再也不用心烦气躁地睡不着觉了！！
-（跳起）
 
-（嘤嘤嘤 (晴明：狐狸叫，但是不知道用啥好））
-那么接下来，魔理沙想和店主做到什么程度？
-最终还是以结婚为前提的吧！？
+（好耶）
+
+// 冰龍： 我也想不到有什麼更合適的 用“嚶嚶嚶”我覺得沒有問題。  
+（嘤嘤嘤 (晴明：狐狸叫 但是不知道用啥好））  
+
+那么那么 魔理沙想和店主变成什么关系？
+
+果然最终还是要以结婚为前提——！？
 
 牵…
 
-如果能牵着手散步就…
+如果能牵着手散步就好了…
 
 你到底是有多青涩啊！！
 
-009
-实际上比真正的魔理沙还大了点！
-毕竟本来就很小，变个差不多大小就行了
+---
 
-你是找死吧
+## 09
 
-010
+其实我这个要比真正的魔理沙大一点！
 
-嘿咻
+嘛 毕竟本来的很含蓄 所以只是变了个差不多的大小
+
+（揉揉）
+
+你想死是吧
+
+---
+
+## 010
+
+哇哦  
 魔理沙好可爱！
 
-这样的话店主想不注意到我都不行！！
-你好像挺高兴啊。。
-（下次也试试这一件）
+这样的话店主想不在意都不行！！
 
-不过，仔细想一下
+（下面试试这一件）
 
-一想到去那家店的人的打扮
-这种衣服香霖早就看惯了吧
+你好像挺高兴啊…
 
-额…那家店简直就是什么属性都有的魔境啊！！
+…不过 我觉得吧
 
-011
-有时公主也会跟过来
+考虑到去那家店的人的打扮
 
-那个店不就是个冷清的旧工具店吗！？
-为啥像个火爆的任选商店似的
+这种衣服香霖早就看惯了吧…
 
-我也想知道啊！？
-知道的时候就已经聚集起各式各样的人了
-呜。。这样的话，只能用必杀技了！！ 嘭！
+额…
 
-必杀技，兔女郎哦！！ 兔女郎！！
+那家店简直就是什么属性都有的魔境啊！！
+
+---
+
+## 011 有时公主也会跟过来
+
+那家店不就是个冷清的旧道具店吗！？
+
+为啥变成任人挑选的激战区了
+
+我才想问啊！？
+
+注意到的时候那家店就已经聚集起各式各样的人了…
+
+呜…这样的话 只能用必杀技了…！！
+
+（嘭！）
+
+传家宝 兔女郎哦！！ 兔女郎！！
+
 （兔兔女郎）
-这样漂亮的大耳朵别的客人可没有吧！？
-兔子大概也是熟客吧。。
 
-012
+像这样奇特的大耳朵别的客人可没有吧！？
 
-永远的粉丝
+兔子也可以算是熟客吧…
 
-话说回来，这样换装真的能有效果吗
+---
+
+## 012 只是粉丝
+
+而且这样换装真的能有效果吗？
+
 （虽然我确实喜欢打扮）
 
-是那个吗？类似狐妖的（七十二变！）之类的主意？
+这是那个吗？类似狐妖的“七十二变！”之类的主意？
+
 （嘭）
 
-不是已经说好了，只要魔理沙同意就可以随意换装的吗！？
+这当然是因为这是在魔理沙的同意之上的随意换装！？
+
 （瞪眼）
-你太过分了吧？
+
+你有点惡心啊？
 
 魔理沙对自己的可爱还是认识不足啊
-打扮地再可爱一点吧
 
-别这样，你把我想成这样我可一点都高兴不起来
+打扮得再可爱一点吧
 
-不用担心！ 
+别这样啦 你用那种眼神看我我也一点都高兴不起来
+
+不用担心！
+
 （呼呼）
-即使推你们这一对，但是不会插一腿的！！
 
-抱歉，根本听不懂你的狐言乱语
+我会支持我推的人 但不会想和她结合的！！
 
-013
-精准点
-既然魔理沙说什么样都没关系
+抱歉 根本听不懂你的狐言乱语
+
+---
+
+## 013 精准点
+
+而且 虽然魔理沙说和打扮没有关系
+
 （嘭）
-怎么样，给人感觉帅帅的眼镜男
-这样的店主魔理沙受得了吗
+
+怎么样？帅气系的眼镜男！！
+
+这样的外观对店主 love 的魔理沙是不是按捺不住！？
+
 （闪亮）
+
 （哈）
-啊、啊嘞，没有砰然心动吗！？
-对了！少了呆毛！？
+
+咦！？ 没有砰然心动吗！？
+
+对了！是因为头发吧！？
+
 （嘭）
 
-这啥啊，睡醒没洗头吗
-（太不讲究了吧？）
-再加上除了本人才是本命之外，别人完全不感兴趣！？
+这啥啊 刚睡醒的头吗
 
-014
-效果拔群
-唉，真是的，这样可以了吗？
+（太邋遢了吧？）
+
+这个人是除了本命以外其他人都不感兴趣吧！？
+
+---
+
+## 014 效果拔群
+
+唉 真是的 这样可以了吗？
+
 （嘭 咔嚓）
 
-笨笨笨，笨蛋！！！
-突然变成了香霖吓我一跳！！
-（大喘气）
+笨笨笨 笨蛋！！！
 
-打过那么多妖怪的魔法师，别就这点程度就惊慌失措。。
-但是比起又强又漂亮的魔理沙，我更喜欢这样一心一意，可爱的魔理沙
+别突然变成香霖啊  
+这不是吓我一跳吗！！
+
+（哇哇哇…）
+
+和那么多妖怪战斗过的魔法师 别因为这点程度就惊慌失措啊…
+
+但是比起又强又帅气的魔理沙 我最喜欢这样一心一意又可爱的魔理沙哦  
 （✳霖之助的声音）
 
-（抚摸 一心一意 最喜欢了 可爱）
+啊…非常抱歉…
 
-啊…非常 抱歉。。
+（  
+  摸摸头  
+  一心一意  
+  可爱  
+  最喜欢  
+）
 
-015
-他追求的东西
+---
 
-（够了）
-我的喜好无所谓了
-找找看香霖喜欢的东西吧！？
-认真想一想好吗！？
+## 015 他追求的东西
 
-这样啊…
-那个店主好像对女性没兴趣
-是不是只喜欢衣服本身啊？
-（又破了啊。。 先赊账）
+（真是的！！）
 
-毕竟他甚至对女生衣服的缝纫方法都了如指掌
-对那家伙来说，珍贵的工具才是第一的吧
+不用管我的喜好啦！！
 
-原来如此，这样的话只要是罕见的衣服什么都可以
-（这个很少见啊！）
-并没有一定让女生穿着的必要
+不是在找香霖喜欢的东西吗！？  
+先整理一下提案吧！？
 
-啊这 也就是说
-谁穿（魔理沙）并不重要？
+是呢…  
+那个店主虽然对女性没有兴趣  
+但是对衣服本身是很喜欢的吧？
 
-016
-远远不到决战的时候
-所以你这不是说出来了吗，还说没这个意思！！
+（
+  又弄破了…  
+  
+  先赊账
+
+  R小姐
+）
+
+至少熟悉到能准备女性的衣服
+
+对那家伙来说这也是一种珍贵的道具吧
+
+原来如此  
+这样的话只要是罕见的衣服什么都可以
+
+（这挺稀奇的！）
+
+并不一定是要女生穿的
+
+咦 这也就是说
+
+并不需要穿的人（魔理沙）？
+
+---
+
+## 016 离决战还很远
+
+所以我不是说了嘛 这种事没有意义！！
+
 （举手投降）
-别那我撒气啊！？
 
-够了！破罐子破摔吧
+别拿我撒气啊！？
+
+够了！破罐子破摔吧！
+
 现在马上去见香霖
-（嘭 心动 墙壁 壁咚）
-就这德行对上本人真的能行吗
 
-切 别烦
+（嘭 心动 壁咚）
+
+就这德行对上本人真的能行吗？
+
+…你真烦
+
+（小鹿乱撞）
 
 先和我练习吧
-。。嗯 我尽量
 
-017
-因为魔理沙很注重穿着，所以去那家店的时候也穿着特别的裙子
-当然这方面也要完全复刻（咔）
+…嗯 我尽量
 
-018
+---
+
+## 017
+
+因为魔理沙很注重打扮 所以去那家店的时候也穿着特别的内衣  
+
+当然这方面也完美再现了
+
+（沙沙沙…）
+
+（咔）
+
+---
+
+## 018
+
 最近
+
 魔理沙的样子很怪
 
 就像小时候似的缠着我
-饭菜的味道也觉得变怪了
 
-这么说来之前好像也有狐狸变成魔理沙样子的这码事
-难道这次也？
+饭菜的味道感觉也变了
 
-害 怎么会
-脑袋又没上顶着树叶
-喂--香霖在吗--！！
+说起来以前好像有过狐狸变成魔理沙样子的事
 
-嘿 说曹操曹操到。。
-听说今晚神社有宴会哦！
+难道说这次也？
 
-终于到秋天了！吃着美味尽享红叶吧！！
-果然是狐狸吗!？
+…不会，吧
 
-019
-超乎意料的开头
+脑袋上又没顶着树叶
 
-呵呵呵 香霖那家伙肯定会被进化过的我惊艳的
+喂— 香霖在吗—！！
 
-通过特训掌握的自信在举止中展现
+哦 说曹操曹操到…
+
+听说神社今晚有宴会哦！
+
+难得的秋天！  
+我们用枫叶作下酒菜一起喝一杯吧！！
+
+果然可能是狐狸…!？
+
+---
+
+## 019 超乎意料的开头
+
+呵呵呵…  
+香霖那家伙 在惊艳于我的进化
+
 （摇晃 摇晃）
 
-在她的帮助下调查清楚了香霖的全部行动模式
-（参加考试 旧工具店 木头人 绝食系 遗憾)
+说不定是我在特训中掌握的自信体现在了一举手一投足之间
 
-说教、挖苦、冷处理全部能灵活反击
+和她一起调查清了香霖的全部行动模式
 
-那么 放马过来吧（微笑）
-那么 会不会去呢？ 宴会！
-欸！？
+（  
+  考试中会出的森近霖之助  
+  木头人  
+  绝食系  
+  令人遗憾
+
+  所谓旧道具店  
+）
+
+说教、挖苦、敷衍我全部都灵活地反击给你看
+
+那么 放马过来吧
+
+（微笑）
+
+那么 去不去呢？ 宴会！
+
 （鬼鬼祟祟）
 
-020
-前所未有的机敏
-欢迎光临。。有什么可以帮您吗（鬼鬼祟祟）（哆哆嗦嗦）
-为啥这么疏远啊！？
-不如说根本是在警戒我了！？
-为什么香霖对我是这样的态度！？
+欸！？
+
+---
+
+## 020 前所未见的敏捷度
+
+（鬼鬼祟祟）
+
+（扭扭捏捏）
+
+欢…欢迎光临…  
+有什么可以帮您吗
+
+为啥这么见外啊！？
+
+难道是在防备我！？
+
+怎么回事  
+香霖居然用这种态度对我！？
+
 从没见估计这样的香霖
 
-021
-想象不到的喜好
-呜。。!只要能确认有尾巴那就能看破原型了。。
-果然没那么简单。。
+（啪啪）
 
-抱歉对你动手动脚的，作为赔罪 想要的东西随便选吧
-额。。啊、呜 难得一见，来点吃的吧？ （为什么用敬语）
+（沙）
 
-（油炸豆腐）
+---
 
-来 快吃吧！就这样现出原形吧！！
+## 021 没有印象的喜好
 
-022紧张
-香霖你到底要干啥啊！！
-有话要说就直接说呗！？
+呵…!  
+本来以为只要能确认到尾巴  
+就能看破原型了…
 
-可恶。。！这样都没有漏出破绽吗！！
-这样的话，只能慢慢套话了！！
+果然没那么简单吗…
 
-适可而止吧！你难道想让我上当吗！！
-不管是多高明的诈骗，我已经看穿了你的身体是假货
+抱歉我脚滑了  
+作为赔罪  
+我准备了一些你喜欢的食物
 
-那。。那是因为今天感觉有些胸闷。。
-（只能这么说）
-不是这样的！抱歉了！！
+额…啊，嗯  
+难得来一次  
+就吃点吧？
 
-023
-险些绝交的危机
-（啊嘞。。？感觉香霖冷漠？）
-坏心眼 性骚扰 我被讨厌了。。？
-抱歉！ 到此为止了！!
+（为什么用敬语）
+
+（※ 油炸豆腐）
+
+来 快冲上去吧！  
+然后就这样现出原形吧！！
+
+---
+
+## 022 拼尽了全力
+
+香霖你到底怎么了啊！！
+
+有话要说就直接说啊！？
+
+可恶…！  
+这样都不漏出破绽吗！！
+
+这样的话  
+只能试试看套话了！！
+
+适可而止吧！你难道觉得我会上当吗！！
+
+不管你伪装得多高明  
+我都已经看穿了你的这副身体是假冒的！！
+
+虽，虽然今天是在胸部填了些东西…
+
+（但是你也不用这样说吧…）
+
+不是！  
+但是对不起！！
+
+---
+
+## 023 差点面临绝交的危机
+
+（咦…？感觉香霖很冷漠？）
+
+又坏心眼  
+还性骚扰  
+难道我被讨厌了…？
+
+抱歉！ 请别再继续了！!
+
 （看不下去了!!）
 
-诶？有两个魔理沙？？（跪下
-这个是本人，我才是妖怪
-不是魔理沙的错
-让魔理沙遭到误解，给他出馊主意的全是我！！
+诶？有两个魔理沙？？
 
-看这个态度 不像是恶作剧？
-我武断行事也有错 请别太伤心
-（店主是个明事理的人太好了）
-（不愧是魔理沙喜欢的人） 只是
-下次再披着魔理沙的皮干坏事我就给你送神社去？
-Σ(っ °Д °;)っ
+（跪下）
 
-024
-不不行，在这种地方 
-大家都看着呢
-好了好了，把手放开
-不要 
-一个人到处喝酒又被狐狸教唆怎么办
-但。但是。。
-(脸上浮现笑容)
+她是本人！  
+我才是妖怪！！
 
-而且不是你主动要牵手的吗
-只要想就能牵着我的手不好吗
+不是魔理沙的错！  
+让魔理沙遭到误解  
+给她出馊主意并且作出行动的  
+都是我！！
 
-。。为什么把这件事
-那家伙，都说出去了！？从哪里！？ 从哪里听来的！？
+…看你这个态度  
+并不是有恶意的恶作剧吧？
 
-025
-后记
-初次见面的大家初次见面。老读者的各位万事如意。我是futa
-感谢您本次购买《绿结コンコンと》
-如果能稍微帮您的人生消磨时间的话就太好了。
+我草率地行事也有错  
+请别太放在心上
 
-这次，我觉得比起1对1，在二者之间多一个人会更有趣，所以就想找个给魔理沙帮忙的角色，但是那孩子的朋友大多比较被动，不会积极介入，所以思考的结果就是把这个角色给了狐妖
-在二次创作中不知不觉就给印象不太固定的角色赋予了便利的性格。
-个人而言着重强调了魔理沙的少女气质非常开心
+（店主是个明事理的人真的太好了）
 
-违和感：（“我们的幻想乡是这样的！”）感觉首先是这个
+（不愧是魔理沙喜欢上的人）
 
-那么就到此为止先告辞了。
+只是
+
+下次再用魔理沙的样子  
+干多余的事的话  
+我就给你送神社去明白了吗？
+
+（惊吓）
+
+---
+
+## 024 目的达成
+
+不，不行…  
+香霖…  
+在这种地方…
+
+大家都看着呢…
+
+快把手放开啦！！
+
+（呀）
+
+不要
+
+一个人喝酒走来走去  
+又被狐狸教唆了怎么办
+
+但，但是…
+
+(脸要挂不住了)
+
+而且你不是想牵手的吗？
+
+我的手  
+你想牵的话就牵着嘛
+
+…！？  
+为什么你知道这事
+
+是那家伙说出去的吧！？
+听到了哪里！？
+都听到了哪里！？
+
+---
+
+## 025 后记
+
+初次见面的大家初次见面。老读者的各位万事如意。我是futa。  
+感谢您本次购买《结缘狐妖》  
+如果能稍微帮到您消磨一下人生的闲暇的话那就太好了。
+
+这次，我觉得比起1对1，在二者之间多夹一个人会更有趣，  
+所以就想找个给魔理沙帮忙的角色。但是她的朋友大多都不是很主动，  
+应该是不会积极介入的，所以思考的结果就是让狐妖扮演了这个角色。  
+在二次创作中很容易就轻易地给没什么固定印象的角色赋予特别的性格呢。  
+不过就我个人而言，通过她积极地进攻，变相强调出了魔理沙的少女气质  
+令我非常开心。
+
+如果您产生了违和感，请就“我眼中的幻想乡是这样的！”而原谅我吧。
+
+那么就在此先告辞了。  
 期待能再次见面。
+
+futa
