feat: 更新外來韋編9

--- a/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
+++ b/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
@@ -215,7 +215,7 @@
   - ——
     - 名称未设定，4 面中 BOSS，背上有翅膀。
   - 雾雨魔理沙
-    - 4 面 BOSS，表记虽然是「魔梨沙」但其实是错别字。头发是红色的，语调也和现在不一样。
+    - 4 面 BOSS，表记虽然是「魔梨沙」但其实是错别字。头发是红色的，口气也和现在不一样。
 - 东方梦时空
   - 爱莲
     - 停止了成长的长寿的魔法使，二次创作的角色。
@@ -231,3 +231,117 @@
     - 9 面 BOSS，从平行世界来的大学教授（比较物理学）。
 
 余谈：这次尽量收集了图片，但是没有刊载涉及其他权益方的二次创作角色的图像。当然，即使这里没有刊载图像，游戏中也是带着图像登场的。
+
+---
+
+## BW 010
+
+- 东方灵异传
+  - 留琴
+    - 灵梦 END 中登场，动力源不明的女仆，不是「ma ru chi」
+  - 咪咪号
+    - 魔理沙 END 中登场，说着「啾」的 ICBM，是二次创作的角色。
+- 东方幻想乡
+  - ——
+    - 名称未设定，从地里冒出的 1 面 BOSS，好像是花。
+  - 奥莲姬
+    - 1 面 BOSS，妖怪，外表和人类没什么区别。
+  - 胡桃
+    - 2 面 BOSS，吸血鬼，湖的看门人。
+  - ——
+    - 名称未设定，3 面中 BOSS，好像是镜子。
+  - 艾丽
+    - 3 面 BOSS，梦幻馆的看门人。
+  - ——
+    - 名称未设定，4 面中 BOSS，背上有翅膀，好像是妖精。
+  - 幽香
+    - 5 面 - 6 面 BOSS，梦幻馆之主，风见幽香。
+  - 梦月
+    - Extra BOSS，梦幻世界之主。
+  - 幻月
+    - Extra BOSS，梦月的姐姐。
+  - ——
+    - 名称未设定，1 面中 BOSS，少女角色。
+- 东方怪绮谈
+  - 萨拉
+    - 1 面 BOSS，魔界的看门人。
+  - ——
+    - 名称未设定，2 面中 BOSS，像是生了翅膀的球。
+  - 露易兹
+    - 2 面 BOSS，魔界的一般人。
+  - ——
+    - 名称未设定，3 面中 BOSS，和「幻想乡」 4 面中 BOSS 极其相似。
+  - 爱丽丝
+    - 3 面 - Extra BOSS，爱丽丝·玛格特洛依德。
+  - ——
+    - 名称未设定，4 面中 BOSS，帽子是她的特征。
+  - 雪
+    - 4 面 BOSS，姐妹里黑的那一方。
+  - 舞
+    - 4 面 BOSS，姐妹里白的那一方。
+  - ——
+    - 名称未设定，5 面中 BOSS，少女角色。
+  - 梦子
+    - 5 面 BOSS，魔界的女仆，会扔小刀过来。
+  - 神绮
+    - 6 面 BOSS，魔界的创造神。
+
+余谈：「梦时空」的留琴的名字是借用的二次创作，就造型来说完全是不同的人。还有如果给不知道旧作的人看「封魔录」的雪的话他可能会喊「魔理沙」。
+
+---
+
+## BW 011
+
+- 东方怪绮谈
+  - ——
+    - 名称未设定，Extra 中 BOSS 的卡牌兵，上面画着少女。
+- 东方红魔乡
+  - 露米娅
+    - 1 面 BOSS，操纵黑暗的妖怪。
+  - ——
+    - 名称未设定，2 面中 BOSS，一般叫「大妖精」。
+  - 琪露诺
+    - 2 面 BOSS，以雾之湖作为势力范围的妖精。
+  - 红美铃
+    - 3 面 BOSS，红魔馆的看门人。
+  - ——
+    - 名称未设定，4 面中 BOSS，一般叫「小恶魔」。
+  - 帕秋莉·诺蕾姬
+    - 4 面 BOSS · Extra 中 BOSS，魔法使，红魔馆之主的友人。
+  - 十六夜咲夜
+    - 5 面 BOSS，女仆长，可以停止时间的人类。
+  - 蕾米利亚·斯卡雷特
+    - 6 面 BOSS，是吸血鬼也是红魔馆之主，可以操纵命运。
+  - 芙兰朵露·斯卡雷特
+    - Extra BOSS，蕾米利亚的妹妹，什么都会被她破坏。
+- 东方妖妖梦
+  - 蕾蒂·霍瓦特洛克
+    - 1 面 BOSS，自称背后黑手。
+  - 橙
+    - 2 面 BOSS·Extra 中 BOSS，八云蓝的式神。
+  - 莉莉白
+    - 4 面中 BOSS，会告知春天的到访。
+  - 露娜萨·普莉兹姆利巴
+    - 4 面 BOSS，骚灵姐妹中负责小提琴。
+  - 梅露兰·普莉兹姆利巴
+    - 4 面 BOSS，骚灵姐妹中负责小号。
+  - 莉莉卡·普莉兹姆利巴
+    - 4 面 BOSS，骚灵姐妹中负责键盘。
+  - 魂魄妖梦
+    - 5 面 BOSS，白玉楼的园丁。
+  - 西行寺幽幽子
+    - 6 面 BOSS，白玉楼之主。
+  - 八云蓝
+    - Extra BOSS · Phantasm 中 BOSS，紫的式神。
+  - 八云紫
+    - Phantasm BOSS，幽幽子的友人。
+- 东方萃梦想
+  - 伊吹萃香
+    - BOSS（也可作为自机使用），本应是离开了幻想乡的鬼。
+- 东方永夜抄
+  - 莉格露·奈特巴格
+    - 1 面 BOSS，虫子妖怪。
+  - 米斯蒂娅·萝蕾拉
+    - 2 面 BOSS，夜雀。
+
+余谈：说到魔理沙，初次登场时头发是红的，性格、口气也和现在完全不同。虽然在「梦时空」里变成金发了，直到「怪绮谈」里性格和口气也相差很远。
