feat: 更新外來韋編

--- a/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
+++ b/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
@@ -344,4 +344,65 @@
   - 米斯蒂娅·萝蕾拉
     - 2 面 BOSS，夜雀。
 
-余谈：说到魔理沙，初次登场时头发是红的，性格、口气也和现在完全不同。虽然在「梦时空」里变成金发了，直到「怪绮谈」里性格和口气也相差很远。
+余谈：说到魔理沙，初次登场时头发是红的，性格、口气也和现在完全不同。虽然在「梦时空」里变成金发了，但直到「怪绮谈」里性格和口气都还相差很远。同样在「梦时空」里登场的北白河千百合的性格、口气和现在的魔理沙印象比较接近。
+
+---
+
+## BW 012
+
+- 东方永夜抄
+  - 上白泽慧音
+    - 3 面 BOSS，Extra 中 BOSS。半人半兽的 wahakudaku（「上白泽」的音读 + 首字懒音）
+  - 因幡天为
+    - 5 面中 BOSS，因幡之白兔。
+  - 铃仙·优昙华院·因幡
+    - 5 面 BOSS，月之兔。
+  - 八意永琳
+    - 6 面 BOSS，月之贤者。
+  - 蓬莱山辉夜
+    - 6 面 BOSS，月之公主。
+  - 藤原妹红
+    - Extra BOSS，仇视辉夜的不死人。
+- 东方花映塚
+  - 射命丸文
+    - 处于中 BOSS 的位置，报纸记者的天狗。
+  - 梅蒂欣·梅兰可莉
+    - 处于中 BOSS 的位置，刚出生不久的妖怪人偶。
+  - 小野塚小町
+    - 处于中 BOSS 的位置，负责在三途川摆渡的死神。
+  - 四季映姬·夜摩仙那度
+    - 最终 BOSS，负责幻想乡的阎魔。
+- 东方风神录
+  - 秋叶静
+    - 1 面中 BOSS，八百万之神。
+  - 秋壤子
+    - 1 面 BOSS，八百万之神。
+  - 键山雏
+    - 2 面 BOSS，雏人偶。
+  - 河城荷取
+    - 3 面 BOSS，河童，有工程师气质。
+  - 犬走椛
+    - 4 面中 BOSS，白狼天狗，负责巡山。
+  - 东风谷早苗
+    - 5 面 BOSS，守矢神社的巫女，现人神。
+  - 八坂神奈子
+    - 6 面 BOSS，守矢神社的神灵。
+  - 洩矢诹访子
+    - Extra BOSS，守矢神社的神灵。
+- 东方绯想天
+  - 永江衣玖
+    - 不合群的龙宫的使者，侍奉比那名居家。
+  - 比那名居天子
+    - BOSS，不良天人。
+  - 琪斯美
+    - 1 面中 BOSS，在桶里。
+  - 黑谷山女
+    - 1 面 BOSS，操纵疾病（传染病）。
+  - 水桥帕露西
+    - 2 面 BOSS，桥姬。
+
+余谈：中 BOSS 的名字虽然很长时间都没有设定，但是 ZUN 在本杂志「2018 Autumn!」的连载专栏「幻想乡人妖名鉴」里说「我本来认为（中 BOSS）只是小怪的延伸所以没有必要取名，但是大家都在问」，所以从「妖妖梦」起就开始设定了。
+
+---
+
+## BW 013
