feat: 更新外來韋編

--- a/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
+++ b/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
@@ -394,6 +394,7 @@
     - 不合群的龙宫的使者，侍奉比那名居家。
   - 比那名居天子
     - BOSS，不良天人。
+- 东方地灵殿
   - 琪斯美
     - 1 面中 BOSS，在桶里。
   - 黑谷山女
@@ -406,3 +407,178 @@
 ---
 
 ## BW 013
+
+- 东方地灵殿
+  - 星熊勇仪
+    - 3 面 BOSS，鬼之四天王中的一人。
+  - 古明地觉
+    - 4 面 BOSS，会用第三只眼读心。
+  - 火焰猫燐
+    - 5 面 BOSS，觉的宠物。
+  - 灵乌路空
+    - 6 面 BOSS，地狱鸦，觉的宠物。
+  - 古明地恋
+    - Extra BOSS，觉的妹妹，第三只眼现在正封印着。
+- 东方星莲船
+  - 纳兹玲
+    - 1 面 BOSS，毘沙门天的使者。
+  - 多多良小伞
+    - 2 面 BOSS，路过的付丧神。
+  - 云居一轮 & 云山
+    - 3 面 BOSS，入道和入道使的组合。
+  - 村纱水蜜
+    - 4 面 BOSS，飞在天上的宝船「星辇船」的船长。
+  - 寅丸星
+    - 5 面 BOSS，毘沙门天的代理人。
+  - 圣白莲
+    - 6 面 BOSS，从人变成妖怪的魔法使（物理）。
+  - 封兽鵺
+    - Extra BOSS，身份不明的妖怪。
+- 东方绯想天则
+  - 大鲶鱼
+    - 自机是美铃时的 BOSS，CPU专用。
+- 文花帖 DS
+  - 姬海棠果
+    - 家里蹲的天狗，会用非智能机念写。
+- 妖精大战争
+  - 桑尼米尔克
+    - BOSS，日光妖精。
+  - 露娜切露德
+    - BOSS，月光妖精。
+  - 斯塔萨菲雅
+    - BOSS，星光妖精。
+  - （译注：露娜和斯塔的图反了）
+- 东方神灵庙
+  - 幽谷响子
+    - 2 面 BOSS，入门命莲寺的山彦。
+  - 宫古芳香
+    - 3 面 BOSS，青娥制作的僵尸。
+  - 霍青娥
+    - 4 面 BOSS，邪仙，将芳香做成了僵尸。
+  - 苏我屠自古
+    - 5 面中 BOSS，侍奉神子的亡灵。
+  - 物部布都
+    - 5 面 BOSS，侍奉神子的道士，尸解仙。
+  - 丰聪耳神子
+    - 6 面 BOSS，既是仙人也是圣人。
+
+余谈：在「红魔乡」中初次登场的大妖精，在「妖精大战争」中再次出场时被重画了，变成拿着花的样子了。该作中负责角色立绘的虽然是漫画家的比良坂，但是点绘依旧是由 ZUN 制作。
+
+---
+
+## BW 014
+
+- 东方神灵庙
+  - 二岩猯藏
+    - Extra BOSS，被鵺喊来幻想乡的妖怪狸。
+- 东方心绮楼
+  - 秦心
+    - BOSS，面灵气（面具的付丧神）。
+- 东方辉针城
+  - 若鹭姬
+    - 1 面 BOSS，淡水中的人鱼。
+  - 赤蛮奇
+    - 2 面 BOSS，飞头蛮。
+  - 今泉影狼
+    - 3 面 BOSS，狼女。
+  - 九十九八桥
+    - 4 面 BOSS · Extra中 BOSS，琴的付丧神。
+  - 鬼人正邪
+    - 5 面 BOSS，天邪鬼。怂恿了针妙丸。
+  - 少名针妙丸
+    - 6 面 BOSS，小人族。使用压模的小槌。
+  - 堀川雷鼓
+    - Extra BOSS，和式太鼓的付丧神。
+- 东方凭依华
+  - 茨木华扇
+    - 自机，仙人。游戏里是此次初次登场。
+  - 宇佐见菫子
+    - BOSS，外面世界的高中生，能使用超能力。
+- 东方绀珠传
+  - 清兰
+    - 1 面 BOSS，月兔。
+  - 铃瑚
+    - 2 面 BOSS，月兔。
+  - 哆来咪·蘇伊特
+    - 3 面 BOSS，支配梦的人。
+  - 稀神探女
+    - 4 面 BOSS，月之民。
+  - 克勞恩皮丝
+    - 5 面 BOSS，地狱的妖精。
+  - 纯狐
+    - 6 面 BOSS，对月之民抱有仇恨。
+  - 赫卡提亚·拉碧斯拉祖利
+    - Extra BOSS，地狱的女神。是淳子的友人并帮助了她。
+- 东方凭依华
+  - 依神女苑
+    - BOSS， 疫病神。紫苑的双胞胎妹妹。
+  - 依神紫苑
+    - BOSS，贫穷神。女苑的双胞胎姐姐。
+- 东方天空璋
+  - 爱塔妮缇拉尔瓦
+    - 1 面 BOSS，凤蝶妖精。
+  - 坂田合欢
+    - 2 面 BOSS，山姥。
+
+余谈：这次的列表主要是先介绍在游戏中登场的角色，所以有一些在游戏中是初次登场但是在游戏以外的作品中已经登场了的角色。比如「妖精大战争」的三個妖精、「深秘录」的华扇。
+
+---
+
+## BW 015
+
+- 东方天空璋
+  - 高丽野阿吽
+    - 3 面 BOSS，曾经是博丽神社的狛犬。
+  - 矢田寺成美
+    - 4 面 BOSS，曾经是魔法之森的地蔵。
+  - 尔之田里乃
+    - 5 面 BOSS，侍奉隐岐奈的童子，负责茗荷。
+  - 丁礼田舞
+    - 5 面 BOSS，侍奉隐岐奈的童子，负责竹子。
+  - 摩多罗隐岐奈
+    - 6 面 · Extra BOSS，秘神。和设立幻想乡有关的人。
+- 东方鬼形兽
+  - 戎璎花
+    - 1 面 BOSS，流产子偶像。
+  - 牛崎润美
+    - 2 面 BOSS，牛鬼。
+  - 庭渡久侘歌
+    - 3 面 · Extra 中 BOSS，野生鸡之神。
+  - 吉吊八千慧
+    - 4 面 BOSS，执掌畜生界的组织之一的鬼杰组的组长。
+  - 杖刀偶磨弓
+    - 5 面 BOSS，袿姬制作的士兵。
+  - 埴安神袿姬
+    - 6 面 BOSS，畜生界的人類灵召唤出的神灵。
+  - 骊驹早鬼
+    - Extra BOSS，执掌畜生界的组织之一的劲牙组的组长。
+- 东方香霖堂
+  - 森近霖之助
+    - 故事的讲述者，道具店 · 香霖堂的主人。
+- 东方求闻史记
+  - 稗田阿求
+    - 稗田阿礼的转世，拥有完全记忆力但短命。
+- 东方儚月抄
+  - 铃仙二号
+    - 丰姬的宠物，继任铃仙的位子。
+  - 绵月丰姬
+    - 月之公主，使用应用了量子论的「连接山与海的能力」。
+  - 绵月依姬
+    - 月之公主，通过让神灵凭依来使用能力。
+- 东方铃奈庵
+  - 本居小铃
+    - 人类村落的租书店
+- 东方封魔录
+  - 反狱王
+    - 怨灵，好像对博丽神社抱有仇恨。
+- 东方灵异传
+  - 奥野田美宵
+    - 酒馆 · 鲵呑亭的看板娘
+
+余谈：在表的最后汇总的是还未在游戏中登场但是在游戏以外的作品中登场了的角色们。关于立绘，我都是从「东方人妖名鉴 常世篇」中引用的。此外，反狱王没有出现真身。
+
+---
+
+## BW 016
+
+
