feat: 更新外來韋編 9

--- a/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
+++ b/喵玉漢化組/正在處理/我乐多丛志/外来韦编9 002-023 数字特辑/外来韦编9_002-023_数字特辑.md
@@ -581,4 +581,83 @@
 
 ## BW 016
 
+### 25 年中发表的音乐 549
 
+#### 所谓怀旧风的音乐
+
+&emsp;&emsp;回顾一下可以发现上海爱丽丝幻乐团的游戏常被称作怀旧风的作品。「红魔乡」被叫作「21 世纪的 20 世纪型竖版弹幕射击游戏」，「风神录」是「令人怀念的经典原生弹幕射击游戏」等等。游戏中的音乐也是一样的。那么，此处所说的怀旧风音乐到底是什么呢？在以前游戏机本体还性能很低的时候，游戏机的内置音源能同时播出的声音其数量和种类都很少。比如说家用计算机能播出的声音只有 3 个单声道音和 1 种噪音（尽管逐渐有所增加）。到了超级家用计算机的时候，一下子就可以使用 8 个双声道音了，而且音色也可以采用 PCM 音频采样数据处理。到了 ZUN 就职于游戏公司的时候，市场上现行的 PlayStation2 等机器已经可以同时发出 48 音了。  
+&emsp;&emsp;能发出众多的声音后，音乐在游戏中起到的作用也发生了变化。所谓 3 音，总得来说就是为了想办法复现音乐的主要 3 元素，即旋律、节拍、和声的东西。后来技术发展了，用 PCM 使角色出声的机会也变多了，以「街头霸王 2」（卡普空）的大流行等为契机，突显声音的演出成为了主流。与之相比，特别是以业务型游戏为中心，音乐被作为衬托使用的事情变多了。另外，伴随着家用游戏机的发展追求电影般的音乐、音效、环境音的结果，比起游戏业初期 BGM 的重要性逐渐退步了。想必您已经清楚了，东方的作品所被说的怀旧风，不过是在宣扬这是强烈地突显了在音乐的意义上也是怀旧的旋律且充斥在游戏中的游戏罢了。
+
+#### 关于音乐的数法
+
+&emsp;&emsp;ZUN 写下的乐曲的用途和数量主要是以下几种。
+
+- 自制游戏用……261 首
+- 自制音乐 CD 用……210 首
+- 原作漫画单行本的付录 CD 用……33 首
+- 其他，以 ZUN 的名义提供的……45 首
+
+&emsp;&emsp;在这次刊载的表中，分别刊载了「各游戏中使用了多少音乐」、「各 CD 里收录了多少音乐」、「漫画单行本等作品中提供了多少音乐」。  
+&emsp;&emsp;首先是自制游戏，我尽可能地和游戏中实际使用的 Music Room 的截图一起进行了介绍。表中所列曲数就是游戏中所使用的乐曲的数量。比如说「怪绮谈」的 Music Room 虽然也完全收录了从「灵异传」到「幻想乡」的音乐（甚至包含一些改编、未使用的音乐），但因为没有在实际的图中使用，所以没有计数。此外没有什么特别要写的在表中以空栏呈现。  
+&emsp;&emsp;关于音乐 CD，以主要系列的「ZUN's Music Collection」和「幺乐团的历史系列」作了大的区分。前者中原创音乐和游戏内使用的乐曲的改编以大慨半开的比例进行了收录。后者是将旧作的游戏音乐微调整后进行了收录，其中还收录了连「怪绮谈」的 Music Room 中也未收录的未使用曲、以及些许新曲。  
+&emsp;&emsp;自著的书籍及执笔了原作的漫画单行本的付录 CD 中，基本上多数是收录了一首新曲及兩首游戏乐曲的改编版。另外，同一作品内每本单行本都有付录的作品统一算作一部作品。
+
+#### 关于提供的音乐
+
+&emsp;&emsp;关于前述分类中的第四项，虽然没有放入表中但也做了数字上的统计。提供元及曲数如下。
+
+A. ZUN's Strange Works……6 首
+
+有只刊载于上海爱丽丝幻乐团首页的音乐。另外无法从首页前去。
+
+B. Torte Le Magic……3 首
+
+向东方以外的二次创作游戏提供。
+
+C. 秋霜玉 ~ Clockworks……19 首
+
+D. 稀翁玉 ~ Fairy Dance……10 首
+
+向 ZUN 在大学时所属的社团制作的游戏提供的音乐和插画。
+
+E. Cradle - 东方幻乐祀典……2 首
+
+还提供过东方改编曲 CD。
+
+F. 黄昏酒场 ~ Uwabami Breakers ~……1 首
+
+向同人软件制作社团的同好制作的游戏提供。
+
+G. 神魔讨绮传 ~ Matus in Mystic Geometries…1 首
+
+向东方二次创作提供的乐曲。
+
+H. 东方幻想麻雀……1 首
+
+同样是向东方二次创作提供的乐曲。这里还使用了为「神魔讨绮传」提供的乐曲。因为 ZUN 本人出场而很有名
+
+I. 8BITMUSIC POWER FINAL……1 首
+
+向家用计算机兼容软件提供。
+
+J. INDIE Live Expo2……1 首
+
+为独立游戏创作的活动主题曲。
+
+---
+
+// TODO: 17 ~ 19
+
+---
+
+## BW 020
+
+### 25 年间写作的书籍、执笔了原作的漫画等作品 19
+
+#### 关于漫画作品
+
+&emsp;&emsp;ZUN 第一次执笔、提供的漫画原作是「东方三月精 ~ Easten and Little Nature Deity」，2005 年 3 月开始在角川书店发售的杂志「Comp Ace」上连载。虽然「三月精」第一部在第一卷就更换了漫画负责人，但是成为了连载到四部的系列，並且作为漫画作品累计卷数全 13 册，是最多的漫画。内容上以游戏中难以作为主角聚焦的杂兵角色「妖精」为主角，描写了和灵梦等人为首的妖怪们的生活。漫画作品中有特别多像这样的既然要做游戏以外的作品，就尽可能聚焦游戏中难以触及的部分的姿态。后来的作品也有相同的视角。另外，会有 ZUN 制作的游戏诸如以「三月精」为主题的游戏「妖精大战争」的话题混入使得游戏与漫画作品产生了轻微的联系也逐渐成为了共通的姿态。  
+&emsp;&emsp;下一部开始的漫画的「东方儚月抄 ~ Silent Sinner in Blue」（Comic REX 连载，一迅社）。「儚月抄」是以多角度看游戏永夜抄的后日谈故事「第二次月面战争」为目的的企划，是一个由 ZUN 担任原作的漫画、同样由 ZUN 执笔的小说、以及以第三视角看这些的四格漫画的三个作品在三个杂志同时连载的企划。背后似乎有“故事的敌方角色月之公主在游戏中实在是过强了难以作为 BOSS，怎么才能让妖怪找到转机”这样的想法。  
+&emsp;&emsp;「茨歌仙」以其他的官方书籍中透露的居住在幻想乡的「仙人」华扇作为主角展开故事。作为单部作品是持续卷数持续最长的作品。另外，游戏作品中之后除了出场了同为仙人的其他角色（神子等），华扇也在「深秘录」中第一次在游戏中登场。  
+&emsp;&emsp;「铃奈庵」以在幻想乡中作为弱智存在的人类村落的居民小铃为主角展开故事。相比较拥有超人能力的神通力、魔法等的游戏的主角灵梦、魔理沙等人，本作主角的特点是仅具有一点小能力（可以阅读妖魔书的能力）的普通人。  
+&emsp;&emsp;
